--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
 
     <string name="txtTitulo">Halo Combat Evolved</string>
     <string name="txtApartado">Historia</string>
+    <string name="tvHalo">Se define como Universo de Halo a todos los acontecimientos datados dentro de todas las entregas de la franquicia de dicho juego. Dicho universo se sitúa aproximadamente 500 años en el futuro, la raza humana ha colonizado varios planetas gracias al descubrimiento del viaje interlúminico en el siglo XXIII, pero también con la humanidad en una devastadora guerra contra una alianza alienígena conocida como el Covenant, con una ideología sobre unos anillos; construidos por una antigua raza extraterrestre conocida como los Forerunner, que al ser activados comenzaría el Gran Viaje cuando en realidad, toda la vida en la galaxia seria destruida.</string>
 
 </resources>
